--- a/index.html
+++ b/index.html
@@ -117,17 +117,9 @@
                     </div>
                 </ul>
 
-<!--                <ul>-->
-<!--                    <h3>Technische Fähigkeiten</h3>-->
-<!--                    <li>Webentwicklung</li>-->
-<!--                    <li>Android App-Entwicklung</li>-->
-<!--                    <li>Datenbanken</li>-->
-<!--                    <li>Testen und Debugging</li>-->
-<!--                </ul>-->
-
                     <ul class="program">
-                        <h3>Programmiersprachen</h3>
-<!--                        <h3 style="margin-top: -0.5rem;margin-bottom: 0.4rem;">Programmiersprachen</h3>-->
+<!--                        <h3>Programmiersprachen</h3>-->
+                        <h3 style="margin-top: 0.5rem;margin-bottom: 0.4rem;">Programmiersprachen</h3>
                         <div class="blockSkala">
                         <li>
                             <div class="skala">
@@ -176,7 +168,7 @@
         </div>
         <div class="column2">
             <div class="section">
-                <h1> MAIIA PUSHKAROVA </h1>
+                <h1> Maiia PUSHKAROVA </h1>
                 <h2>BERUFSERFARUNG</h2>
                 <ul>
                     <h3>Verkaufsleiterin</h3>
@@ -260,6 +252,9 @@
                     <li>Kritikfähigkeit</li>
                     <li>Eigeninitiative</li>
                     <li>Anpassungsfähigkeit</li>
+                    <li>Hohe Konzentration</li>
+                    <li>Verantwortungsbewusstsein</li>
+                    <li>mathematisches Denken</li>
                 </ul>
                 <h2>INTERESSEN</h2>
                 <ul>
@@ -284,7 +279,7 @@
                         Spieltisch
                     </li>
                     <li>Präziser Umgang mit Geld und Chips, Einhaltung aller Spielregeln</li>
-                    <li>Hohe Konzentration, Verantwortungsbewusstsein und mathematisches Denken</li>
+<!--                    <li>Hohe Konzentration, Verantwortungsbewusstsein und mathematisches Denken</li>-->
                     <li>Multitasking und professioneller Kundenumgang in stressigen Situationen</li>
                 </ul>
                 <h2>BILDUNGSWEG</h2>
