--- a/index.html
+++ b/index.html
@@ -13,47 +13,47 @@
 </head>
 <body>
 <div class="wrapper">
-<!--    <div class="block">-->
-<!--        <div class="block14">-->
-<!--            <p>wird</p>-->
-<!--            <p>gearbeitet</p>-->
-<!--        </div>-->
-<!--        <div class="block1">-->
+    <!--    <div class="block">-->
+    <!--        <div class="block14">-->
+    <!--            <p>wird</p>-->
+    <!--            <p>gearbeitet</p>-->
+    <!--        </div>-->
+    <!--        <div class="block1">-->
 
-<!--            <div class="block11">-->
-<!--                <div class="titName">-->
-<!--                    <h1>MAIIA PUSHKAROVA</h1>-->
-<!--                    <h1>Junior-Entwickler</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="block12">-->
-<!--                <div class="tit1">-->
-<!--                    <div class="section">-->
-<!--                        <h2>KONTAKT</h2>-->
-<!--                        <ul>-->
-<!--                            <li>Birkenweg 1</li>-->
-<!--                            <li>6142 Gettnau</li>-->
-<!--                            <li>+41 79 520 83 85</li>-->
-<!--                            <li><a target="_blank" href=mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">-->
-<!--                                <span style="font-size: 1.1rem;" class="">maya2882@gmail.com</span> </a>-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="tit2">-->
-<!--                    <div class="sectionTit2">-->
-<!--                        <h1>BEWERBUNG</h1>-->
-<!--                        <h3>als Jobtitel bei der Firma GOOGLE</h3>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
+    <!--            <div class="block11">-->
+    <!--                <div class="titName">-->
+    <!--                    <h1>MAIIA PUSHKAROVA</h1>-->
+    <!--                    <h1>Junior-Entwickler</h1>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <div class="block12">-->
+    <!--                <div class="tit1">-->
+    <!--                    <div class="section">-->
+    <!--                        <h2>KONTAKT</h2>-->
+    <!--                        <ul>-->
+    <!--                            <li>Birkenweg 1</li>-->
+    <!--                            <li>6142 Gettnau</li>-->
+    <!--                            <li>+41 79 520 83 85</li>-->
+    <!--                            <li><a target="_blank" href=mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">-->
+    <!--                                <span style="font-size: 1.1rem;" class="">maya2882@gmail.com</span> </a>-->
+    <!--                            </li>-->
+    <!--                        </ul>-->
+    <!--                    </div>-->
+    <!--                </div>-->
+    <!--                <div class="tit2">-->
+    <!--                    <div class="sectionTit2">-->
+    <!--                        <h1>BEWERBUNG</h1>-->
+    <!--                        <h3>als Jobtitel bei der Firma GOOGLE</h3>-->
+    <!--                    </div>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
 
-<!--        <div class="block13">-->
-<!--            <img src="img/Profilbild.png" alt="Maiia Pushkarova">-->
-<!--        </div>-->
+    <!--        <div class="block13">-->
+    <!--            <img src="img/Profilbild.png" alt="Maiia Pushkarova">-->
+    <!--        </div>-->
 
-<!--    </div>-->
+    <!--    </div>-->
     <div class="block">
         <div class="column1">
             <div class="section">
@@ -72,9 +72,9 @@
                     <li>Birkenweg 1</li>
                     <li>6142 Gettnau</li>
                     <li>+41 79 520 83 85</li>
-<!--                    <li><a target="_blank" href=mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">-->
-<!--                        <span style="font-size: 1.1rem;" class="">maya2882@gmail.com</span> </a>-->
-<!--                    </li>-->
+                    <!--                    <li><a target="_blank" href=mailto:maya2882@gmail.com?subject=Subject+text&body=Body+text">-->
+                    <!--                        <span style="font-size: 1.1rem;" class="">maya2882@gmail.com</span> </a>-->
+                    <!--                    </li>-->
                 </ul>
             </div>
             <div class="icon-section">
@@ -117,10 +117,10 @@
                     </div>
                 </ul>
 
-                    <ul class="program">
-<!--                        <h3>Programmiersprachen</h3>-->
-                        <h3 style="margin-top: 0.5rem;margin-bottom: 0.4rem;">Programmiersprachen</h3>
-                        <div class="blockSkala">
+                <ul class="program">
+                    <!--                        <h3>Programmiersprachen</h3>-->
+                    <h3 style="margin-top: 0.5rem;margin-bottom: 0.4rem;">Programmiersprachen</h3>
+                    <div class="blockSkala">
                         <li>
                             <div class="skala">
                                 <div class="skala1">C</div>
@@ -161,9 +161,9 @@
                                 </div>
                             </div>
                         </li>
-                        </div>
+                    </div>
 
-                    </ul>
+                </ul>
             </div>
         </div>
         <div class="column2">
@@ -279,7 +279,7 @@
                         Spieltisch
                     </li>
                     <li>Präziser Umgang mit Geld und Chips, Einhaltung aller Spielregeln</li>
-<!--                    <li>Hohe Konzentration, Verantwortungsbewusstsein und mathematisches Denken</li>-->
+                    <!--                    <li>Hohe Konzentration, Verantwortungsbewusstsein und mathematisches Denken</li>-->
                     <li>Multitasking und professioneller Kundenumgang in stressigen Situationen</li>
                 </ul>
                 <h2>BILDUNGSWEG</h2>
@@ -291,17 +291,17 @@
                 </dl>
                 <dl>
                     <dt>Ukrainischer Sekundarschulabschluss / Hochschulreife , 06/1999</dt>
-                       <dd>Vermerk "Entspricht der schweizerischen gymnasialen Maturität</dd>
+                    <dd>Vermerk "Entspricht der schweizerischen gymnasialen Maturität</dd>
 
                 </dl>
-<!--                <dl>-->
-<!--                    <dt>Oberschule, Donetsk Ukraine, 09/1997 - 07/1999</dt>-->
-<!--                    <dd></dd>-->
-<!--                </dl>-->
-<!--                <dl>-->
-<!--                    <dt>Basisschule, Donetsk Ukraine, 09/1989 - 06/1997</dt>-->
-<!--                    <dd></dd>-->
-<!--                </dl>-->
+                <!--                <dl>-->
+                <!--                    <dt>Oberschule, Donetsk Ukraine, 09/1997 - 07/1999</dt>-->
+                <!--                    <dd></dd>-->
+                <!--                </dl>-->
+                <!--                <dl>-->
+                <!--                    <dt>Basisschule, Donetsk Ukraine, 09/1989 - 06/1997</dt>-->
+                <!--                    <dd></dd>-->
+                <!--                </dl>-->
 
                 <h2>WEITERBILDUNG</h2>
                 <dl>
@@ -312,49 +312,59 @@
 
         </div>
     </div>
-<!--    <div class="block">-->
-<!--        <div class="blockBew">-->
-<!--            <div class="divBew2">-->
+    <div class="block">
+        <div class="blockBew">
+            <div class="divBew2">
 
-<!--                Name Firma-->
-<!--                Herr / Frau-->
-<!--                Vorname Nachname-->
-<!--                Strasse-->
-<!--                PLZ Ort-->
+                Name Firma
+                Herr / Frau
+                Vorname Nachname
+                Strasse
+                PLZ Ort
 
-<!--                Luzern, 27. Mai 2024-->
+                Luzern, 27. Mai 2024
 
-<!--                Bewerbung als XY 100%-->
+                Bewerbung als XY 100%
 
-<!--                Sehr geehrter Herr /Frau XY-->
-
-
-<!--                Durch Frau Egli, Fachspezialistin Integration von der Dienstelle Asyl- und Flüchtlingswesen bin ich auf-->
-<!--                die Stellenausschreibung xy aufmerksam geworden.-->
-
-<!--                Ich bin zusammen mit xy und xy am xy aus der Ukraine geflüchtet und habe dort über zehn Jahre als-->
-<!--                xy gearbeitet. Leider ist es für mich aufgrund meiner Situation und meiner Sprachkenntnisse sehr-->
-<!--                schwierig eine Stelle im Bereich meiner Ausbildung zu finden. Ich würde mich deshalb sehr freuen,-->
-<!--                wenn ich in der xy erste Arbeitserfahrungen sammeln könnte, um so mein Können und Wissen unter-->
-<!--                Beweis zu stellen. Ich möchte mir in der Schweiz ein neues Leben aufbauen und so schnell wie-->
-<!--                möglich unabhängig von der Wirtschaftlichen Sozialhilfe sein.-->
-
-<!--                Aktuell lasse ich alle meine Diplome übersetzen und anerkennen. Im Deutsch habe ich das Niveau B1-->
-<!--                erfolgreich abgeschlossen und lege bald die Prüfung fürs B2 ab. Mein Ziel ist es, auch das C1-->
-<!--                Sprachdiplom zu erwerben, um mich persönlich weiterzubilden und meine-->
-<!--                Arbeitsintegrationschancen zu steigern.-->
-
-<!--                Über eine Einladung zu einem persönlichen Vorstellungsgespräch freue ich mich.-->
-
-<!--                Freundliche Grüsse-->
+                Sehr geehrter Herr /Frau XY
 
 
-<!--                UNTERSCHRIFT-->
-<!--                Vorname Nachname-->
+                Durch Frau Egli, Fachspezialistin Integration von der Dienstelle Asyl- und Flüchtlingswesen bin ich auf
+                die Stellenausschreibung xy aufmerksam geworden.
 
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+                Ich bin zusammen mit xy und xy am xy aus der Ukraine geflüchtet und habe dort über zehn Jahre als
+                xy gearbeitet. Leider ist es für mich aufgrund meiner Situation und meiner Sprachkenntnisse sehr
+                schwierig eine Stelle im Bereich meiner Ausbildung zu finden. Ich würde mich deshalb sehr freuen,
+                wenn ich in der xy erste Arbeitserfahrungen sammeln könnte, um so mein Können und Wissen unter
+                Beweis zu stellen. Ich möchte mir in der Schweiz ein neues Leben aufbauen und so schnell wie
+                möglich unabhängig von der Wirtschaftlichen Sozialhilfe sein.
+
+               <p class ="bewerb"> Bereits seit meinem 18. Lebensjahr war ich in der Ukraine berufstätig, parallel zu meinem
+                Universitätsstudium. In über 20 Jahren Berufserfahrung konnte ich mir Kenntnisse und Fähigkeiten in
+                verschiedenen Bereichen aneignen. Nachdem ich mit 37 Jahren finanzielle Stabilität erreicht hatte,
+                entschied ich mich bewusst dafür, meinen Horizont zu erweitern und mich geistig weiter zu fordern. Aus
+                diesem Grund absolvierte ich eine Ausbildung an einer Computerakademie, wo ich erfolgreich die
+                Grundlagen der Programmierung erlernte. Meine Bereitschaft und Motivation, Neues zu lernen, sind
+                ungebrochen. Ich wäre Ihnen sehr dankbar und würde mich freuen, wenn Sie mir die Möglichkeit geben
+                würden, meine Fähigkeiten und meine Lernbereitschaft während eines Praktikums unter Beweis zu stellen.
+               </p>
+
+                Aktuell lasse ich alle meine Diplome übersetzen und anerkennen. Im Deutsch habe ich das Niveau B1
+                erfolgreich abgeschlossen und lege bald die Prüfung fürs B2 ab. Mein Ziel ist es, auch das C1
+                Sprachdiplom zu erwerben, um mich persönlich weiterzubilden und meine
+                Arbeitsintegrationschancen zu steigern.
+
+                Über eine Einladung zu einem persönlichen Vorstellungsgespräch freue ich mich.
+
+                Freundliche Grüsse
+
+
+                UNTERSCHRIFT
+                Vorname Nachname
+
+            </div>
+        </div>
+    </div>
     <div class="block">
         <img class="imgDoc" src="img/Sds.png">
     </div>
