--- a/index.html
+++ b/index.html
@@ -365,12 +365,16 @@
 <!--            </div>-->
 <!--        </div>-->
 <!--    </div>-->
+    <div class="block">  <img class="imgDocD" src="img/diplom1.png"></div>
+<!--    <div class="block">  <img class="imgDocD" src="img/diplom2.png"></div>-->
+<!--    <div class="block">  <img class="imgDocD" src="img/diplom3.png"></div>-->
     <div class="block">
         <img class="imgDoc" src="img/Sds.png">
     </div>
     <div class="block">
         <img class="imgDoc" src="img/alemaniaB21.jpg">
     </div>
+<!--    <div class="block"></div>-->
 
 </div>
 <!--</div>-->
