--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 <!--                Luzern, 27. Mai 2024-->
 
-<!--                Bewerbung als XY 100%-->
+<!--                Bewerbung für eine Position im Software Engineering-->
 
 <!--                Sehr geehrter Herr /Frau XY-->
 
@@ -365,18 +365,18 @@
 <!--            </div>-->
 <!--        </div>-->
 <!--    </div>-->
+
     <div class="block">  <img class="imgDocD" src="img/diplom1.png"></div>
-<!--    <div class="block">  <img class="imgDocD" src="img/diplom2.png"></div>-->
-<!--    <div class="block">  <img class="imgDocD" src="img/diplom3.png"></div>-->
+    <div class="block">  <img class="imgDocD" src="img/diplom2.png"></div>
+    <div class="block">  <img class="imgDocD" src="img/diplom3.png"></div>
     <div class="block">
         <img class="imgDoc" src="img/Sds.png">
     </div>
     <div class="block">
-        <img class="imgDoc" src="img/alemaniaB21.jpg">
-    </div>
-<!--    <div class="block"></div>-->
-
+        <img class="imgDoc" src="img/B2_2.png">
 </div>
+
+
 <!--</div>-->
 <script>
     window.onload = function () {
