--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="sprache2">
                             <li>- Muttersprache</li>
                             <li>- Fliessend</li>
-                            <li>- A2</li>
+                            <li>- A1</li>
                             <li>- B1</li>
                         </div>
                     </div>
@@ -312,80 +312,26 @@
 
         </div>
     </div>
-<!--    <div class="block">-->
-<!--        <div class="blockBew">-->
-<!--            <div class="divBew2">-->
-
-<!--                Name Firma-->
-<!--                Herr / Frau-->
-<!--                Vorname Nachname-->
-<!--                Strasse-->
-<!--                PLZ Ort-->
-
-<!--                Luzern, 27. Mai 2024-->
-
-<!--                Bewerbung für eine Position im Software Engineering-->
-
-<!--                Sehr geehrter Herr /Frau XY-->
-
-
-<!--                Durch Frau Egli, Fachspezialistin Integration von der Dienstelle Asyl- und Flüchtlingswesen bin ich auf-->
-<!--                die Stellenausschreibung xy aufmerksam geworden.-->
-
-<!--                Ich bin zusammen mit xy und xy am xy aus der Ukraine geflüchtet und habe dort über zehn Jahre als-->
-<!--                xy gearbeitet. Leider ist es für mich aufgrund meiner Situation und meiner Sprachkenntnisse sehr-->
-<!--                schwierig eine Stelle im Bereich meiner Ausbildung zu finden. Ich würde mich deshalb sehr freuen,-->
-<!--                wenn ich in der xy erste Arbeitserfahrungen sammeln könnte, um so mein Können und Wissen unter-->
-<!--                Beweis zu stellen. Ich möchte mir in der Schweiz ein neues Leben aufbauen und so schnell wie-->
-<!--                möglich unabhängig von der Wirtschaftlichen Sozialhilfe sein.-->
-
-<!--               <p class ="bewerb"> Bereits seit meinem 18. Lebensjahr war ich in der Ukraine berufstätig, parallel zu meinem-->
-<!--                Universitätsstudium. In über 20 Jahren Berufserfahrung konnte ich mir Kenntnisse und Fähigkeiten in-->
-<!--                verschiedenen Bereichen aneignen. Nachdem ich mit 37 Jahren finanzielle Stabilität erreicht hatte,-->
-<!--                entschied ich mich bewusst dafür, meinen Horizont zu erweitern und mich geistig weiter zu fordern. Aus-->
-<!--                diesem Grund absolvierte ich eine Ausbildung an einer Computerakademie, wo ich erfolgreich die-->
-<!--                Grundlagen der Programmierung erlernte. Meine Bereitschaft und Motivation, Neues zu lernen, sind-->
-<!--                ungebrochen. Ich wäre Ihnen sehr dankbar und würde mich freuen, wenn Sie mir die Möglichkeit geben-->
-<!--                würden, meine Fähigkeiten und meine Lernbereitschaft während eines Praktikums unter Beweis zu stellen.-->
-<!--               </p>-->
-
-<!--                Aktuell lasse ich alle meine Diplome übersetzen und anerkennen. Im Deutsch habe ich das Niveau B1-->
-<!--                erfolgreich abgeschlossen und lege bald die Prüfung fürs B2 ab. Mein Ziel ist es, auch das C1-->
-<!--                Sprachdiplom zu erwerben, um mich persönlich weiterzubilden und meine-->
-<!--                Arbeitsintegrationschancen zu steigern.-->
-
-<!--                Über eine Einladung zu einem persönlichen Vorstellungsgespräch freue ich mich.-->
-
-<!--                Freundliche Grüsse-->
-
-
-<!--                UNTERSCHRIFT-->
-<!--                Vorname Nachname-->
-
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-
-    <div class="block">  <img class="imgDocD" src="img/diplom1.png"></div>
-    <div class="block">  <img class="imgDocD" src="img/diplom2.png"></div>
-    <div class="block">  <img class="imgDocD" src="img/diplom3.png"></div>
     <div class="block">
-        <img class="imgDoc" src="img/Sds.png">
+        <img class="imgDocD" src="img/diplom1.png">
     </div>
+<!--    <div class="block"><img class="imgDocD" src="img/diplom2.png"></div>-->
+<!--    <div class="block"><img class="imgDocD" src="img/diplom3.png"></div>-->
+
     <div class="block">
-        <img class="imgDoc" src="img/B2_2.png">
-</div>
+        <img class="imgDoc" src="img/B2_3.jpg">
+    </div>
+<!--    <div class="block"><img class="imgDoc" src="img/Sds.png"></div>-->
+
+    <!--</div>-->
+    <script>
+        window.onload = function () {
+            window.setTimeout(function () {
+                document.body.classList.add('loaded');
+            }, 4000);
+        };
 
 
-<!--</div>-->
-<script>
-    window.onload = function () {
-        window.setTimeout(function () {
-            document.body.classList.add('loaded');
-        }, 4000);
-    };
-
-
-</script>
+    </script>
 </body>
 </html>
